# 2x2macropad_configurator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
assets/icon/: MacropadConfigurator.afdesign
assets/installer/: Background.afdesign  Background.tiff
examples/: hid_test.rs
scripts/: package_dmg.sh  run.sh
src/: font.rs  hid_manager.rs  led_effects.rs  lib.rs  macro_editor.rs  macro_parser.rs  macropad.rs  macropad_updater.rs  macropad_wrapper.rs  main.rs  tab_bar_theme.rs  type_wrapper.rs
