[package]
name = "macropad_configurator"
version = "0.6.0"
edition = "2021"
description = "A programmer for the 2x2 Macropad."
default-run = "macropad_configurator"

[package.metadata.bundle]
name = "Macropad Configurator"
identifier = "io.github.arfrie22.macropad_configurator"
icon = ["assets/icon/png/*.png"]
# version = "1.0.0"
# resources = ["assets", "images/**/*.png"]
copyright = "Copyright (c) arfrie22 2022. All rights reserved."
category = "Developer Tool"
short_description = "A programmer for the 2x2 Macropad."
long_description = """
A tool that allows you to custmize the 4 buttons on the 2x2 Macropad 
used for a UMass All Campus Makerspace workshop.
"""
# deb_depends = ["libgl1-mesa-glx", "libsdl2-2.0-0 (>= 2.0.5)"]
# osx_frameworks = ["SDL2"]
osx_url_schemes = ["io.github.arfrie22.macropad_configurator"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
device_query = "1.1.1"
iced = { version = "0.8", default-features = false, features = ["glow", "tokio", "image", "svg", "canvas", "image_rs"] }
iced_aw = { git = "https://github.com/iced-rs/iced_aw.git", features = [
    "color_picker",
    "tab_bar",
    "tabs",
    "badge",
] }
iced_native = "0.9"
iced_futures = { version = "0.6"}
iced_wgpu = "0.9"
iced_winit = "0.8"
iced_graphics = "0.7"
iced_core = "0.8"

futures = "0.3.25"
hidapi = "2.0.2"
dark-light = "1.0"
reqwest = { version = "0.11.13", features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

usbd-human-interface-device = "0.3.1"

rusb = "0.9"

crc = "3.0"
strum_macros = "0.24"
strum = { version = "0.24", default-features = false, features = ["strum_macros", "derive"] }
macropad_protocol = { git = "https://github.com/arfrie22/2x2macropad_protocol", features = ["multi_versioned"] }
async-std = "1.12.0"

num_enum = { version = "0.5.7"}
image = "0.24.5"
sysinfo = "0.28"
tempfile = "3.3.0"
flate2 = "1.0"
semver = "1.0.16"
# cosmic-text = "0.6.0"
cosmic-text = { git = "https://github.com/pop-os/cosmic-text" }
once_cell = "1.17.0"
fontdue = "0.7.2"

vergen = "7.5"